bebytes/tests/compile_time/attributes/bits_and_size_conflict.stderr
error: Unsupported type for bits attribute. Only integer types (u8, i8, u16, i16, u32, i32, u64, i64, u128, i128) and char are supported. Note: f32, f64, and bool cannot be used with bit fields
  --> tests/compile_time/attributes/bits_and_size_conflict.rs:14:11
   |
14 |     data: Vec<u8>,
   |           ^^^
